tests/semantic/valid/15_r4_declare_b_then_a.hulk
function b() => 1;
function a() => b();

print(a());
