tests/semantic/invalid/08_r2_var_inside_function_used_outside.hulk
function g() => let a = 1 in a;

print(a);
